--- a/example/index.html
+++ b/example/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>min-fetch</title>
+  <script src="//lib.baomitu.com/jquery/1.12.4/jquery.min.js"></script>
 </head>
 <body>
 
