--- a/example/index.html
+++ b/example/index.html
@@ -5,6 +5,7 @@
   <title>min-fetch</title>
   <script src="//lib.baomitu.com/jquery/1.12.4/jquery.min.js"></script>
   <script src="//lib.baomitu.com/axios/0.18.0/axios.min.js"></script>
+  <script src="../dist/http.js"></script>
 </head>
 <body>
 <script>
