rename to chunpu/http

--- a/example/index.html
+++ b/example/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>min-fetch</title>
+  <title>Promised Based Http Client for Real Project</title>
   <script src="//lib.baomitu.com/jquery/1.12.4/jquery.min.js"></script>
   <script src="//lib.baomitu.com/axios/0.18.0/axios.min.js"></script>
   <script src="../dist/http.js"></script>
